# gt-backend

./: .gitignore  Dockerfile  docker-compose.yml  env.example  main.py  pyproject.toml  test_main.http
app/: agency.py  schema.py  settings.py
app/DataSEOAgent/: DataSEOAgent.py
app/DataSEOAgent/tools/: data_mcp.py
